added cleaned dataset to postgres

--- a/notebooks/population_size.ipynb
+++ b/notebooks/population_size.ipynb
@@ -187,7 +187,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv(r\"C:\\Users\\Toby\\Desktop\\Lambda Files\\cityspire-b-ds\\data\\uscities.csv\")\n",
+    "df = pd.read_csv(r\"C:\\Users\\Toby\\Desktop\\Lambda Files\\cityspire-b-ds\\data\\raw\\uscities.csv\")\n",
     "df.head()"
    ]
   },
@@ -910,17 +910,17 @@
     {
      "data": {
       "text/plain": [
-       "78582          61\n",
-       "85541          18\n",
-       "78584          18\n",
-       "85634          16\n",
-       "63121          15\n",
-       "               ..\n",
-       "49304           1\n",
-       "96706 96709     1\n",
-       "07036           1\n",
-       "74446 74467     1\n",
-       "NaN             1\n",
+       "78582                                                                                                                                  61\n",
+       "78584                                                                                                                                  18\n",
+       "85541                                                                                                                                  18\n",
+       "85634                                                                                                                                  16\n",
+       "63121                                                                                                                                  15\n",
+       "                                                                                                                                       ..\n",
+       "37205 37215                                                                                                                             1\n",
+       "68528 68524 68526 68520 68521 68522 68516 68510 68512 68506 68507 68504 68505 68502 68503 68508 68509 68529 68542 68544 68583 68588     1\n",
+       "99206 99212                                                                                                                             1\n",
+       "48808                                                                                                                                   1\n",
+       "NaN                                                                                                                                     1\n",
        "Name: zips, Length: 23952, dtype: int64"
       ]
      },
@@ -1001,6 +1001,17 @@
    "outputs": [],
    "source": [
     "df2.to_csv('population_size_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sqlalchemy import create_engine\n",
+    "engine = create_engine('postgresql://dell4:6hB1iSYrtR@db-test-inovak4.c2uishzxxikl.us-east-1.rds.amazonaws.com:5432/cityspire')\n",
+    "df2.to_sql('population_size', engine)"
    ]
   },
   {
