--- a/notebooks/rent_projection_model.ipynb
+++ b/notebooks/rent_projection_model.ipynb
@@ -911,7 +911,15 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Importing plotly failed. Interactive plots will not work.\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a for loop to apply the model to all 101 cities in the dataset then concatenate the results.\n",
     "from fbprophet import Prophet\n",
@@ -3245,7 +3253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3254,6 +3262,240 @@
     "from joblib import dump, load\n",
     "m = Prophet(interval_width=.95)\n",
     "pickle.dump(m, open(\"rent_model.pkl\", \"wb\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Importing plotly failed. Interactive plots will not work.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test\n",
+    "from joblib import dump, load\n",
+    "import pickle\n",
+    "model = pickle.load(open(\"rent_model.pkl\", \"rb\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:numexpr.utils:NumExpr defaulting to 4 threads.\n",
+      "INFO:fbprophet:Disabling weekly seasonality. Run prophet with weekly_seasonality=True to override this.\n",
+      "INFO:fbprophet:Disabling daily seasonality. Run prophet with daily_seasonality=True to override this.\n",
+      "<ipython-input-6-7ccc6ecd5d7d>:16: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  predictions['yhat'] = predictions.yhat.round()\n",
+      "<ipython-input-6-7ccc6ecd5d7d>:17: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  predictions['RegionID'] = df2['RegionID'].iloc[0]\n",
+      "<ipython-input-6-7ccc6ecd5d7d>:18: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  predictions['RegionName'] = df2['RegionName'].iloc[0]\n",
+      "<ipython-input-6-7ccc6ecd5d7d>:19: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  predictions['SizeRank'] = df2['SizeRank'].iloc[0]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RegionID</th>\n",
+       "      <th>RegionName</th>\n",
+       "      <th>SizeRank</th>\n",
+       "      <th>ds</th>\n",
+       "      <th>yhat</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>84</th>\n",
+       "      <td>102001</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2021-01-01</td>\n",
+       "      <td>1757.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85</th>\n",
+       "      <td>102001</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2021-02-01</td>\n",
+       "      <td>1758.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86</th>\n",
+       "      <td>102001</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2021-03-01</td>\n",
+       "      <td>1759.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>87</th>\n",
+       "      <td>102001</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2021-04-01</td>\n",
+       "      <td>1760.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88</th>\n",
+       "      <td>102001</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2021-05-01</td>\n",
+       "      <td>1760.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>89</th>\n",
+       "      <td>102001</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2021-06-01</td>\n",
+       "      <td>1760.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>90</th>\n",
+       "      <td>102001</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2021-07-01</td>\n",
+       "      <td>1761.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91</th>\n",
+       "      <td>102001</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2021-08-01</td>\n",
+       "      <td>1763.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>92</th>\n",
+       "      <td>102001</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2021-09-01</td>\n",
+       "      <td>1765.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>93</th>\n",
+       "      <td>102001</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2021-10-01</td>\n",
+       "      <td>1767.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>94</th>\n",
+       "      <td>102001</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2021-11-01</td>\n",
+       "      <td>1768.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>102001</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2021-12-01</td>\n",
+       "      <td>1770.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    RegionID     RegionName  SizeRank         ds    yhat\n",
+       "84    102001  United States         0 2021-01-01  1757.0\n",
+       "85    102001  United States         0 2021-02-01  1758.0\n",
+       "86    102001  United States         0 2021-03-01  1759.0\n",
+       "87    102001  United States         0 2021-04-01  1760.0\n",
+       "88    102001  United States         0 2021-05-01  1760.0\n",
+       "89    102001  United States         0 2021-06-01  1760.0\n",
+       "90    102001  United States         0 2021-07-01  1761.0\n",
+       "91    102001  United States         0 2021-08-01  1763.0\n",
+       "92    102001  United States         0 2021-09-01  1765.0\n",
+       "93    102001  United States         0 2021-10-01  1767.0\n",
+       "94    102001  United States         0 2021-11-01  1768.0\n",
+       "95    102001  United States         0 2021-12-01  1770.0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "def prophet_forecast(x, periods=12, freq='MS'):\n",
+    "  rent = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/cityspire-b-ds/main/data/clean/Metro_ZORI_AllHomesPlusMultifamily_SSA.csv')\n",
+    "  rent.reset_index(level=0, inplace=True)\n",
+    "  rent2 = rent.melt(id_vars=[\"index\", \"RegionID\", \"RegionName\", \"SizeRank\"], var_name=\"ds\", value_name=\"yhat\")\n",
+    "  rent3 = rent2.sort_values(by=['SizeRank', 'ds'])\n",
+    "  df1 = rent3.loc[rent3['RegionName'].isin(x)][['ds', 'yhat']]\n",
+    "  df2 = rent3.loc[rent3['RegionName'].isin(x)][['RegionID', 'RegionName', 'SizeRank']]\n",
+    "  df1.columns = ['ds','y']\n",
+    "  df1['ds'] = pd.to_datetime(df1['ds'])\n",
+    "  # m = Prophet(interval_width=.95)\n",
+    "  model.fit(df1)\n",
+    "  future = model.make_future_dataframe(freq=freq, periods=periods)\n",
+    "  forecast = model.predict(future)\n",
+    "  predictions = forecast[['ds', 'yhat']]\n",
+    "  predictions['yhat'] = predictions.yhat.round()\n",
+    "  predictions['RegionID'] = df2['RegionID'].iloc[0]\n",
+    "  predictions['RegionName'] = df2['RegionName'].iloc[0]\n",
+    "  predictions['SizeRank'] = df2['SizeRank'].iloc[0]\n",
+    "  predictions = predictions[['RegionID', 'RegionName', 'SizeRank', 'ds', 'yhat']]\n",
+    "  return predictions.tail(12)\n",
+    "test = ['United States']\n",
+    "prophet_forecast(test)"
    ]
   },
   {
