Ran Prophet on new dataset with zips. Created brand new dataset and pushed said dataset to Postgres

--- a/notebooks/rent_projection_model.ipynb
+++ b/notebooks/rent_projection_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
        "[5 rows x 87 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -911,15 +911,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Importing plotly failed. Interactive plots will not work.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create a for loop to apply the model to all 101 cities in the dataset then concatenate the results.\n",
     "from fbprophet import Prophet\n",
@@ -943,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1028,7 +1020,7 @@
        "4   102001  United States        0  2014-05-01  1403.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1041,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1566,7 +1558,7 @@
        "[103 rows x 97 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1579,7 +1571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2104,7 +2096,7 @@
        "[102 rows x 97 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2117,7 +2109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2146,7 +2138,7 @@
        "      dtype='object', name='ds')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2157,7 +2149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2420,7 +2412,7 @@
        "[5 rows x 97 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2451,7 +2443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2976,7 +2968,7 @@
        "[102 rows x 96 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2985,6 +2977,37 @@
     "# Drop last column\n",
     "df2 = df2.drop(['drop'],axis =1)\n",
     "df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2014-01-01    object\n",
+       "2014-02-01    object\n",
+       "2014-03-01    object\n",
+       "2014-04-01    object\n",
+       "2014-05-01    object\n",
+       "               ...  \n",
+       "2021-08-01    object\n",
+       "2021-09-01    object\n",
+       "2021-10-01    object\n",
+       "2021-11-01    object\n",
+       "2021-12-01    object\n",
+       "Length: 96, dtype: object"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.dtypes"
    ]
   },
   {
@@ -3215,11 +3238,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Put the dataset inside AWS RDS\n",
+    "from sqlalchemy import create_engine\n",
+    "engine = create_engine('postgresql://dell4:6hB1iSYrtR@db-cityspire-samir.c2uishzxxikl.us-east-1.rds.amazonaws.com:5432/cityspire')\n",
+    "rent_final.to_sql('rent_final', engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rent_final.to_csv('final_rent.csv', index=False)"
+    "# rent_final.to_csv('final_rent.csv', index=False)"
    ]
   },
   {
@@ -3257,7 +3292,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Pickle the model. Still needs to be trained at this stage. This is just so we can use Prophet without importing the library.\n",
     "import pickle\n",
     "from joblib import dump, load\n",
     "m = Prophet(interval_width=.95)\n",
@@ -3266,7 +3300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -3279,9 +3313,7 @@
    ],
    "source": [
     "# Test\n",
-    "from joblib import dump, load\n",
-    "import pickle\n",
-    "model = pickle.load(open(\"rent_model.pkl\", \"rb\"))"
+    "model = pickle.load(open(\"../app/models/rent_model.pkl\", \"rb\"))"
    ]
   },
   {
