Added markdown cells to my notebooks so it is easier to digest.

--- a/notebooks/population_size.ipynb
+++ b/notebooks/population_size.ipynb
@@ -1,9 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "retired-computer",
+   "metadata": {},
+   "source": [
+    "# Data Exploration"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "interracial-trainer",
+   "id": "congressional-traveler",
    "metadata": {},
    "outputs": [
     {
@@ -575,6 +583,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "requested-african",
+   "metadata": {},
+   "source": [
+    "# Cleaning Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "serial-drunk",
@@ -718,6 +734,7 @@
     }
    ],
    "source": [
+    "# Drop all irrelevant columns and city column since city_ascii is essentially the same thing\n",
     "df2 = df.drop(['city', 'source', 'military', 'incorporated', 'ranking', 'id'], axis=1)\n",
     "df2.head()"
    ]
@@ -939,6 +956,7 @@
     }
    ],
    "source": [
+    "# Remove the one null value\n",
     "df2['zips'].value_counts(dropna=False)"
    ]
   },
@@ -1013,6 +1031,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Save as CSV so that repository has a copy\n",
     "df2.to_csv('population_size_data.csv')"
    ]
   },
@@ -1023,6 +1042,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Push the csv file to RDS database.\n",
     "from sqlalchemy import create_engine\n",
     "engine = create_engine('postgresql://dell4:6hB1iSYrtR@db-test-inovak4.c2uishzxxikl.us-east-1.rds.amazonaws.com:5432/cityspire')\n",
     "df2.to_sql('population_size', engine)"
@@ -1053,7 +1073,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
