--- a/notebooks/rent_projection_model.ipynb
+++ b/notebooks/rent_projection_model.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Exploration"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -706,6 +713,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Restructure Dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -908,6 +922,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Creating predictions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -1029,6 +1050,13 @@
     "# View the newly concatenated csv\n",
     "df = pd.read_csv('..\\data\\clean\\predictions.csv')\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Restructure Back to Original Format"
    ]
   },
   {
@@ -3011,6 +3039,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Merging Predictions to Original Dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -3238,6 +3273,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a copy of the new dataset within repository\n",
+    "rent_final.to_csv('final_rent.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [],
@@ -3246,15 +3291,6 @@
     "from sqlalchemy import create_engine\n",
     "engine = create_engine('postgresql://dell4:6hB1iSYrtR@db-cityspire-samir.c2uishzxxikl.us-east-1.rds.amazonaws.com:5432/cityspire')\n",
     "rent_final.to_sql('rent_final', engine)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# rent_final.to_csv('final_rent.csv', index=False)"
    ]
   },
   {
@@ -3292,10 +3328,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Pickle the model\n",
     "import pickle\n",
     "from joblib import dump, load\n",
     "m = Prophet(interval_width=.95)\n",
     "pickle.dump(m, open(\"rent_model.pkl\", \"wb\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test"
    ]
   },
   {
@@ -3505,7 +3549,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
     "def prophet_forecast(x, periods=12, freq='MS'):\n",
     "  rent = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/cityspire-b-ds/main/data/clean/Metro_ZORI_AllHomesPlusMultifamily_SSA.csv')\n",
     "  rent.reset_index(level=0, inplace=True)\n",
@@ -3554,7 +3597,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
